gh-787 - Make sure the icon isn't too large

--- a/stroom-ui/src/prototypes/PipelineEditor/ElementDetails/_ElementDetails.scss
+++ b/stroom-ui/src/prototypes/PipelineEditor/ElementDetails/_ElementDetails.scss
@@ -13,6 +13,10 @@
   width: 100%;
 }
 
+.element-details__icon {
+  height: 10px;
+}
+
 .element-details__property-message {
   margin-top: 0px !important;
 }
